# Verba

./: .gitattributes  .gitignore  ANDROID.md  IOS.md  LICENSE  MOBILE.md  README.md  UPDATE_PLAN.md  decoded.key  download_binaries.cjs  index.html  package-lock.json  package.json  schema.json  test_mac.cjs  vite.config.ts  walkthrough.md
.github/workflows/: release.yml
docs/: index.html  style.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: llama-completion-aarch64-apple-darwin  llama-completion-x86_64-apple-darwin
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  lib.rs  llama.rs  llm.rs  os_helpers.rs  storage.rs
src/components/: Popup.tsx  Settings.tsx
src/components/settings/: ApiKeysTab.tsx  HistoryTab.tsx  PreferencesTab.tsx  UpdatesTab.tsx
src/utils/: llm.ts
